🐛 fix: Style error  on iOS and iPad

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -536,3 +536,7 @@ html {
 wc-waterfall > * {
     transition: all .2s;
 }
+
+html.m-overlay-scroll-blocked {
+    position: initial;
+}
